--- a/app/src/main/res/layout/activity_circle_view.xml
+++ b/app/src/main/res/layout/activity_circle_view.xml
@@ -3,46 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
-    <com.zhy.view.CircleViewIndicator
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:visibility="gone"
-        app:circleAutoPlay="true"
-        app:circleBorderType="0"
-        app:circleBorderWidth="5"
-        app:circleColor="@color/colorAccent"
-        app:circleRadius="60dp"
-        app:circleRotateDirection="0">
+    <com.zhy.view.CustomFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:background="@mipmap/img_home_head_bg"
+        android:clipChildren="false">
 
-    </com.zhy.view.CircleViewIndicator>
-
-
-    <com.zhy.view.UECircleMenuLayout
-        android:id="@+id/id_menulayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:id="@id/id_circle_menu_item_center"
+        <com.zhy.view.UECircleMenuLayout
+            android:id="@+id/id_menulayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:visibility="gone"
-                android:layout_width="104.0dip"
-                android:layout_height="104.0dip"
-                android:layout_centerInParent="true"
-                android:background="@drawable/turnplate_center_unlogin" />
+            <RelativeLayout
+                android:id="@id/id_circle_menu_item_center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="116.0dip"
-                android:layout_height="116.0dip"
-                android:layout_centerInParent="true"
-                android:background="@drawable/turnplate_mask_unlogin_normal" />
-        </RelativeLayout>
-    </com.zhy.view.UECircleMenuLayout>
+                <ImageView
+                    android:layout_width="90.0dip"
+                    android:layout_height="90.0dip"
+                    android:layout_centerInParent="true"
+                    android:background="@mipmap/ic_icon_inner" />
+
+                <ImageView
+                    android:id="@+id/circle"
+                    android:layout_width="120.0dip"
+                    android:layout_height="120.0dip"
+                    android:layout_centerInParent="true"
+                    android:background="@mipmap/ic_icon_out" />
+            </RelativeLayout>
+        </com.zhy.view.UECircleMenuLayout>
+
+    </com.zhy.view.CustomFrameLayout>
 
 </LinearLayout>
